add proxy setup

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,6 @@
 [defaults]
-inventory = inventory
+inventory = hosts.ini
 interpreter_python=/usr/bin/python3.10
 vault_password_file = ./.vault_pass
+allow_world_readable_tmpfiles=true
+ansible_user=vagrant
