--- a/roles/db_setup/handlers/main.yml
+++ b/roles/db_setup/handlers/main.yml
@@ -1,4 +1,4 @@
-- name: restart_postgresql
-  systemd:
+- name: Restart postgresql
+  ansible.builtin.systemd:
     name: postgresql
     state: restarted
