--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = hosts.ini
-interpreter_python=/usr/bin/python3.10
+interpreter_python = /usr/bin/python3.10
 vault_password_file = ./.vault_pass
-allow_world_readable_tmpfiles=true
-ansible_user=vagrant
+allow_world_readable_tmpfiles = true
+ansible_user = vagrant
