--- a/roles/upstash_setup/tasks/main.yml
+++ b/roles/upstash_setup/tasks/main.yml
@@ -1,33 +1,33 @@
 - name: Add Docker GPG apt Key
-  apt_key:
+  ansible.builtin.apt_key:
     url: https://download.docker.com/linux/ubuntu/gpg
     state: present
 
 - name: Add Docker Repository
-  apt_repository:
+  ansible.builtin.apt_repository:
     repo: deb https://download.docker.com/linux/ubuntu focal stable
     state: present
 
-- name: Install docker-ce and docker-compose-plugin 
-  apt:
-    pkg: 
+- name: Install docker-ce and docker-compose-plugin
+  ansible.builtin.apt:
+    pkg:
       - docker-ce
       - docker-compose-plugin
-    state: latest
+    state: present
 
 - name: Create upstash directory
-  file:
+  ansible.builtin.file:
     path: /home/vagrant/upstash
     state: directory
+    mode: '0755'
 
 - name: Create docker-compose.yml file from template
-  template:
+  ansible.builtin.template:
     src: docker-compose.yml.j2
     dest: /home/vagrant/upstash/docker-compose.yml
+    mode: '0644'
 
 - name: Create and deploy docker compose services
   community.docker.docker_compose_v2:
     project_src: /home/vagrant/upstash/
     files: docker-compose.yml
-
-
