--- a/roles/app_setup/defaults/main.yml
+++ b/roles/app_setup/defaults/main.yml
@@ -15,3 +15,4 @@ apps_home: "/home/apps"
 git_repo_url: "https://github.com/cycleglorious/jira_clone.git"
 source_code_path: "{{ apps_home }}/source-{{ app_name }}"
 artifact_path: "{{ apps_home }}/{{ app_name }}"
+artifact_name: "{{ app_name }}.zip"
