--- a/roles/app_setup/defaults/main.yml
+++ b/roles/app_setup/defaults/main.yml
@@ -16,3 +16,6 @@ git_repo_url: "https://github.com/cycleglorious/jira_clone.git"
 source_code_path: "{{ apps_home }}/source-{{ app_name }}"
 artifact_path: "{{ apps_home }}/{{ app_name }}"
 artifact_name: "{{ app_name }}.zip"
+
+upstash_port: 8079
+upstash_token: "{{ vault_upstash_token }}"
